# larkmentor

./: .env.bcefghj_template  .env.example  .gitignore  .gitmailmap  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG-v1.5.md  CONTRIBUTORS.md  Dockerfile  FEISHU_SETUP.md  LARKMENTOR.md  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_services.sh  周期总结_2026-05-05.md
.agent-pilot/: hooks.json
.agent-pilot/agents/: debater.yaml  mentor.yaml  pilot.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.larkmentor/: hooks.json
.larkmentor/agents/: debater.yaml  mentor.yaml  pilot.yaml  researcher.yaml  shield.yaml
.larkmentor/schedules/: daily_digest.yaml  weekly_report.yaml
agent/: _DEPRECATED.md  __init__.py  __main__.py  approval.py  attachments.py  cli.py  context.py  hooks.py  learner.py  loop.py  mcp.py  memory.py  named_agents.py  orchestrator_worker.py  permissions.py  providers.py  router.py  scheduler.py  skills.py  subagent.py  teams.py
agent/patterns/: __init__.py  builder_validator.py  chain_of_thought.py  debate.py  multi_agent.py  react.py  reflection.py  tree_of_thoughts.py
agent/tools/: __init__.py  archive_tools.py  canvas_tools.py  doc_tools.py  im_tools.py  lark_cli_tools.py  memory_tools.py  mentor_tools.py  registry.py  slides_tools.py
agent/validators/: __init__.py  a11y_reviewer.py  citation_agent.py  critic.py  quality_gates.py  risk_checker.py  security_auditor.py
agent_pilot/: __init__.py
agent_pilot/intel/: context_pack.py  multi_agent.py
agent_pilot/llm/: __init__.py  safe_json.py
agent_pilot/runtime/: __init__.py  planner.py  state_machine.py
agent_pilot/tools/: __init__.py  canvas.py  doc.py  slide.py
bot/: card_builder.py  card_v2.py  cards_pilot.py  cards_streaming.py  cards_v4.py  event_handler.py  feishu_client.py  feishu_ws_subscriber.py  handlers_v4.py  message_sender.py  pilot_router.py  streaming.py
bot/handlers/: _common.py  card_actions.py  mentor.py  pilot.py  shield.py
core/: advanced_features.py  analytics.py  classification_engine.py  container.py  context_recall.py  event_store.py  feishu_workspace_init.py  flow_detector.py  notification_channels.py  observability.py  recovery_card.py  resilience.py  rookie_buddy.py  sender_profile.py  smart_shield.py  smart_shield_v3.py  structured_logging.py
core/agent_pilot/: __init__.py  advanced.py  advanced_agent.py  orchestrator.py  planner.py  scenarios.py  service.py  share_sig.py  tool_schemas.py
core/feishu_advanced/: __init__.py  applink.py  bitable_agent.py  bitable_ai_node_v4.py  board_api.py  calendar_busy.py  drive_api.py  minutes_fetch.py  reaction_api.py  remote_mcp.py  reply_thread.py  task_v2.py  urgent_api.py  wiki_search.py
core/feishu_cli/: __init__.py  mcp_config.py
core/flow_memory/: __init__.py  archival.py  compaction.py  flow_memory_md.py  working.py
core/mcp_server/: __init__.py  server.py  tools.py
core/mentor/: __init__.py  growth_doc.py  knowledge_base.py  mentor_onboard.py  mentor_review.py  mentor_router.py  mentor_task.py  mentor_write.py  proactive_hook.py  skills_init.py
core/runtime/: __init__.py  hook_runtime.py  permission_facade.py  skill_loader.py  tool_registry.py
core/security/: __init__.py  audit_log.py  hook_system.py  keyword_denylist.py  permission_manager.py  pii_scrubber.py  rate_limiter.py  tool_sandbox.py  transcript_classifier.py
core/sync/: __init__.py  crdt_hub.py  health.py  offline_merge.py  ws_server.py
core/work_review/: __init__.py  monthly_wrapped.py  (+1 more)
dashboard/: api_v7.py  mentor_stats.py  middleware.py  server.py
deploy/: V2_UPGRADE_GUIDE.md  _scp_lib.exp  _ssh_lib.exp  deploy_lark_mentor.sh  deploy_v2.sh  deploy_v3.sh  deploy_v4.sh  rollback.sh  rollback_v3.sh  smoke_test.sh  smoke_test_v2.sh
docs/: ARCHITECTURE_v6.md  ARCHITECTURE_v8.md  DECISIONS.md  DEMO_FEISHU_PLUS.md  DEMO_JUDGE_WOW.md  DEMO_OFFLINE_30s.md  DEMO_SCRIPT.md  DEMO_SCRIPT_v4.md  DEPLOY.md  EVOLUTION.md  FEISHU_ECOSYSTEM.md  HARNESS_DESIGN.md  JUDGE_GUIDE.md  JUDGE_TEST_REPORT.md  MCP_USAGE.md  OPENCLAW_COMPAT.md  PRD_IMPLEMENTATION.md  README_docs.md  plan_execution_records.md  v13_BLUEPRINT.md  v13_DEMO_SCRIPT.md  v4_重构全记录.md  个人周期工作汇报_戴尚好.md  个人阶段成果小结_v7_戴尚好.md  个人阶段成果小结_戴尚好.md  对话记录整理.md  工作汇报_纯文字版_戴尚好.md  技术调研报告.md  更新日志_2026-04-24.md  用户使用指南_Agent_Pilot.md  立意_工位上同时发生.md  踩坑避雷指南.md  项目命名建议.md  项目成果总结.md  飞书开放平台权限配置完整版.md  飞书归档文档_plan_1776967941_da4bc3.md  飞书权限更新后Bot无响应的解决方案.md
flutter_client/: README.md  pubspec.yaml
llm/: llm_client.py  prompts.py
memory/: context_snapshot.py  interruption_log.py  user_state.py
mobile_desktop/: README.md  pubspec.yaml  setup_platforms.sh
scripts/: build_flutter_all.sh  demo_offline.sh  e2e_smoke.sh  install_lark_mcp.sh  judge_demo.py  m4_verify_pptx.py  m6_verify_workforce.py  matrix_test.sh  run_ab_matrix.py  run_t20_smoke.py  setup_feishu_stack_v4.sh  test_all_scenarios.py  verify_llm.py  verify_mimo.py
sync_v4/: __init__.py  yws_server.py
tests/: conftest.py  test_advanced_agent.py  test_agent_pilot.py  test_agent_v4.py  test_concurrency.py  test_config_validation.py  test_dashboard_routes.py  test_e2e_pilot_flow.py  test_exceptions_wired.py  test_flow_detector.py  test_flow_memory.py  test_harness_components.py  test_integration_pilot_flow.py  test_knowledge_base.py  test_llm_client_v12.py  test_llm_memory_inject.py  test_mcp_and_review.py  test_mcp_v2_tools.py  test_mentor.py  test_mentor_skills_init.py  test_onboard.py  test_performance.py  test_pilot_api.py  test_pilot_cards.py  test_pilot_context_service.py  test_pilot_dashboard_v7.py  test_pilot_domain.py  test_pilot_intent_detector.py  test_pilot_learner.py  test_pilot_memory_inject.py  test_pilot_multi_agent.py  test_pilot_planner_orchestrator.py  test_pilot_router.py  test_pilot_task_service.py  test_proactive_hook.py  test_prompt_cache.py  test_recovery_card.py  test_resilience.py  test_runtime.py  test_security_new_layers.py  (+5 more)
utils/: feishu_api.py  time_utils.py
website/: README.md  app.js  demo.html  index.html  style.css
(+221 files in other folders)
