[project]
name = "agent-pilot"
version = "7.2.0"
description = "Agent-Pilot: AI-driven office automation from IM to presentations"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "戴尚好", email = "bcefghj@163.com"},
    {name = "李洁盈", email = "JieyingLiii@outlook.com"},
]
keywords = ["ai-agent", "feishu", "lark", "office-automation", "multi-agent", "crdt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "RUF"]
ignore = [
    "E501", "E702", "E741",  # Line length, multiple statements, ambiguous names
    "B007", "B008", "B904",  # Loop vars, function call defaults, exception chaining
    "F401", "F841",          # Unused imports and variables
    "I001",                  # Import sorting
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF012", "RUF022",  # Fullwidth chars
    "UP006", "UP035", "UP045",  # Type annotation modernization
    "SIM102", "SIM105", "SIM108", "SIM110", "SIM117",  # Simplify patterns
    "TC002", "TC003",  # Type checking imports
]

[tool.ruff.lint.isort]
known-first-party = ["core", "agent", "bot", "llm", "memory", "dashboard", "utils"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM"]
# New optimized files - apply stricter linting
"bot/streaming.py" = []
"bot/cards_streaming.py" = []
"bot/handlers/*" = []
"core/exceptions.py" = []
"core/logging_config.py" = []
"core/sync/health.py" = []
"agent/patterns/builder_validator.py" = []
# Existing codebase - more relaxed
"*" = ["RUF100", "C4", "B", "SIM", "TC"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_configs = true
warn_return_any = false
warn_redundant_casts = false
disallow_untyped_defs = false
exclude = ["tests/", "mobile_desktop/", "sync_v4/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=60 -x"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "e2e: end-to-end tests",
    "unit: fast unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "agent", "bot"]
omit = ["tests/*", "*/__pycache__/*", "*/legacy/*"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]
