[project]
name = "agent-pilot"
version = "9.0.0"
description = "Agent-Pilot: AI-driven office automation from IM to presentations"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "戴尚好", email = "bcefghj@163.com"},
    {name = "李洁盈", email = "JieyingLiii@outlook.com"},
]
keywords = ["ai-agent", "feishu", "lark", "office-automation", "multi-agent", "crdt", "mcp", "function-calling", "harness-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "RUF"]
ignore = [
    "E402", "E501", "E741",
    "B008",
    "F401", "F841",
    "I001",
    "RUF001", "RUF002", "RUF003", "RUF012", "RUF015",
    "UP006", "UP035",
    "SIM102", "SIM108", "SIM117",
    "TC002", "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["core", "agent", "bot", "llm", "memory", "dashboard", "utils"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM"]
# New optimized files - apply stricter linting
"bot/streaming.py" = []
"bot/cards_streaming.py" = []
"bot/handlers/*" = []
"core/exceptions.py" = []
"core/logging_config.py" = []
"core/sync/health.py" = []
"agent/patterns/builder_validator.py" = []
# Existing codebase - more relaxed
"*" = ["RUF100", "C4", "B", "SIM", "TC"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "mobile_desktop/", "sync_v4/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=60 -x"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "e2e: end-to-end tests",
    "unit: fast unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "agent", "bot"]
omit = ["tests/*", "*/__pycache__/*", "*/legacy/*"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]
